updated about me

--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <h1>Place Your Name Here</h1>
-    <p>Write a short paragraph about yourself here.</p>
+    <h1>Jheanel Brown</h1>
+    <p>Hi there! I am a passionate student of ICT! Currwntly studying at the University of the West Indies</p>
+    <p><br>I love creating mobile applications. My latest is a messaging app. It is still in the works. </p>
 </body>
 </html>
