updated about me again

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Jheanel Brown</h1>
-    <p>Hi there! I am a passionate student of ICT! Currwntly studying at the University of the West Indies</p>
+    <p>Hi there! I am a passionate student of ICT! Currently studying at the University of the West Indies</p>
     <p><br>I love creating mobile applications. My latest is a messaging app. It is still in the works. </p>
 </body>
 </html>
